--- a/package.json
+++ b/package.json
@@ -30,13 +30,18 @@
 		"@sveltejs/kit": "1.0.0-next.489",
 		"@typescript-eslint/eslint-plugin": "^5.38.0",
 		"@typescript-eslint/parser": "^5.38.0",
+		"@vcarl/remark-headings": "^0.0.1",
 		"eslint": "^8.22.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"mdsvex": "^0.10.6",
+		"mdsvex-relative-images": "^1.0.3",
 		"node-sass": "^7.0.3",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^2.7.1",
 		"prettier-plugin-svelte": "^2.7.0",
+		"rehype-autolink-headings": "^5.1.0",
+		"rehype-slug": "^4.0.1",
 		"sass": "^1.54.9",
 		"svelte": "^3.50.1",
 		"svelte-check": "^2.9.0",
