--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"node": ">=16.9"
 	},
 	"devDependencies": {
+		"@rollup/plugin-dynamic-import-vars": "^2.0.2",
 		"@sveltejs/adapter-node": "^1.0.0-next.92",
 		"@sveltejs/adapter-vercel": "1.0.0-next.76",
 		"@sveltejs/kit": "1.0.0-next.489",
@@ -51,6 +52,8 @@
 		"vite": "^3.1.3"
 	},
 	"dependencies": {
+		"@storyblok/js": "^2.0.6",
+		"storyblok-js-client": "^5.2.5",
 		"typesafe-i18n": "^5.13.0"
 	}
 }
