--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
 	},
 	"devDependencies": {
 		"@rollup/plugin-dynamic-import-vars": "^2.0.2",
-		"@sveltejs/adapter-node": "^1.0.0-next.92",
-		"@sveltejs/adapter-vercel": "1.0.0-next.76",
-		"@sveltejs/kit": "1.0.0-next.489",
+		"@sveltejs/adapter-node": "^1.1.8",
+		"@sveltejs/adapter-vercel": "^2.0.2",
+		"@sveltejs/kit": "^1.5.3",
 		"@typescript-eslint/eslint-plugin": "^5.38.0",
 		"@typescript-eslint/parser": "^5.38.0",
 		"@vcarl/remark-headings": "^0.0.1",
@@ -49,7 +49,8 @@
 		"svelte-preprocess": "^4.10.7",
 		"tslib": "^2.4.0",
 		"typescript": "^4.8.3",
-		"vite": "^3.1.3"
+		"vite": "^4.1.1",
+		"vitest": "^0.28.4"
 	},
 	"dependencies": {
 		"@storyblok/js": "^2.0.6",
